--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
   justify-content: center;
   height: 100vh;
   background: linear-gradient(120deg, #07caa6, #f0f0f0);
@@ -23,10 +24,10 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 350px;
-  background-color: #fff;
-  padding: 25px;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: #f9f9f9;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .inputGroup {
